Bug 289190 - phong bumpmap filter is broken.
Summary: phong bumpmap filter is broken.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: pentalis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-17 12:04 UTC by Halla Rempt
Modified: 2012-01-27 06:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2011-12-17 12:04:40 UTC
The basic preset is confusing, there are artefacts at the tile borders.
Comment 1 pentalis 2012-01-24 02:06:29 UTC
Git commit 75ebc391333a272cf05099600890c178d67b7cb1 by José Luis Vergara.
Committed on 24/01/2012 at 03:03.
Pushed by jlvergara into branch 'master'.

Create a default config factory for Phong Bumpmap

M  +25   -1    krita/plugins/filters/phongbumpmap/kis_phong_bumpmap_filter.cpp

http://commits.kde.org/calligra/75ebc391333a272cf05099600890c178d67b7cb1
Comment 2 pentalis 2012-01-24 03:02:54 UTC
Git commit 27c5b22bde4f892f18d30012a17bac5d329270b5 by José Luis Vergara.
Committed on 24/01/2012 at 04:01.
Pushed by jlvergara into branch 'master'.

Correct mathematical error in Phong Bumpmap

o The error prevented inclination from going above 45º even if the GUI said 90º
o The error also caused inclination to be calculated in reversal direction

M  +9    -5    krita/plugins/filters/phongbumpmap/phong_pixel_processor.cpp

http://commits.kde.org/calligra/27c5b22bde4f892f18d30012a17bac5d329270b5
Comment 3 pentalis 2012-01-24 03:18:19 UTC
There is probably a threading problem causing the artifacts at the borders of Phong Bumpmap.
Try using it as an Effect Mask, it won't have any border anywhere. It only appears when you apply it by the normal apply dialog, and if you undo the application and try applying it again, you may get the artifacts in different places.

I don't really know what's causing it.

I tried increasing neededRect() to -2,-2,2,2 but the problem persists.
Comment 4 pentalis 2012-01-24 03:25:10 UTC
I also tried generating the bug in an image smaller than the 500x500 inner tile division that I last recall Dmitry mentioning. I did it on a 480x480 image, and couldn't reproduce the tile border errors.
Comment 5 pentalis 2012-01-24 19:53:52 UTC
Git commit 12be5de9997cfd96f6ca7c1a9c49dbca67915b95 by José Luis Vergara.
Committed on 24/01/2012 at 20:48.
Pushed by jlvergara into branch 'master'.

Make PhongBumpmap iterators const
o The iterators were formerly non-const because when the filter was made they were broken. Making them const now corrected the artifacts on the borders of 512x512 tiles when applying the filter.
o changedRect now simply returns 'rect'. This hasn't changed the observed behavior of the filter but is more correct
o Change the lines about inputArea and outputArea for clarity, these variables still retain the same values, but they are now clearer.

M  +6    -5    krita/plugins/filters/phongbumpmap/kis_phong_bumpmap_filter.cpp

http://commits.kde.org/calligra/12be5de9997cfd96f6ca7c1a9c49dbca67915b95
Comment 6 pentalis 2012-01-27 06:49:43 UTC
Git commit 12be5de9997cfd96f6ca7c1a9c49dbca67915b95 by José Luis Vergara.
Committed on 24/01/2012 at 20:48.
Pushed by shantanu into branch 'active-refactoring-shantanu'.

Make PhongBumpmap iterators const
o The iterators were formerly non-const because when the filter was made they were broken. Making them const now corrected the artifacts on the borders of 512x512 tiles when applying the filter.
o changedRect now simply returns 'rect'. This hasn't changed the observed behavior of the filter but is more correct
o Change the lines about inputArea and outputArea for clarity, these variables still retain the same values, but they are now clearer.

M  +6    -5    krita/plugins/filters/phongbumpmap/kis_phong_bumpmap_filter.cpp

http://commits.kde.org/calligra/12be5de9997cfd96f6ca7c1a9c49dbca67915b95